# Kuplung-Rust

./: .editorconfig  .gitignore  .travis.yml  Cargo.toml  README.md  build.rs
assets/: Info.plist  Kuplung_RenderingSettings.yaml  kuplung.rc
assets/shaders/: fractal_mandelbrot.frag  fractal_mandelbrot.vert  light.frag  model_face.tcs  triangle.frag  triangle.vert
assets/shaders/fractals/: julia.frag  julia.vert  mandelbrot.frag  mandelbrot.vert
assets/shaders/rendering/: deferred_g_buffer.vert  deferred_light_box.frag  deferred_shading.frag  model_face.frag  model_face.geom  model_face_effects.frag  model_face_lights.frag  model_face_pbr.frag
assets/shaders/shadertoy/: 4ljGW1.stoy  4tlSzl.stoy  Ms2SD1.stoy  XlSSzK.stoy
assets/shaders/viewer/: light.vert  vertex_sphere.frag
resources/: Kuplung_Settings.yaml
resources/protobuf/: KuplungAppScene.proto  KuplungAppSettings.proto  KuplungDefinitions.proto
resources/shaders/: axis.frag  axis.vert  bounding_box.vert  camera.frag  camera.vert  deferred_g_buffer.frag  deferred_light_box.vert  deferred_shading.vert  grid2d.frag  light_ray.frag  model_face.tes  model_face.vert  model_face_mapping.frag  model_face_misc.frag  model_face_vars.frag  rendering_simple.frag  rendering_simple.geom  rendering_simple.tcs  rendering_simple.tes  rendering_simple.vert  shadertoy.vert  skybox.frag  skybox.vert
src/: app.rs  configuration.rs  main.rs
src/fractals/: fractals_manager.rs  julia.rs  mandelbrot.rs  mod.rs
src/imgui-winit-support/: Cargo.toml
src/imgui-winit-support/src/: lib.rs
src/imgui_renderer/: renderers.rs  versions.rs
src/kuplung/: app.rs  configuration.rs  mod.rs  utils.rs
src/rendering/: gl_utils.rs  mod.rs  renderer.rs  rendering_manager.rs  triangle.rs  triangler.rs
src/settings/: configuration.rs  kuplung_logger.rs  mod.rs
src/shadertoy/: mod.rs  shadertoy_engine.rs  shadertoy_manager.rs
src/ui/: mod.rs  panel_backend.rs  ui.rs  ui_manager.rs
src/ui/components/: code_editor.rs  log.rs  mod.rs
src/ui/dialogs/: options.rs
src/ui/imgui_renderer/: mod.rs  renderers.rs
src/utilities/: ui.rs
src/utils/: file_io.rs  mod.rs
