[package]
name = "Kuplung-Rust"
description = "Rust port of Kuplung"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/supudo/Kuplung-Rust"
authors = ["Sergey Petrov <supudo@gmail.com>"]
keywords = ["OpenGL", "graphics", "rendering"]
build = "build.rs"

[dependencies]
gl = "*"
winit = "0.30.4"
glutin = "0.32.0"
glutin-winit = "0.5.0"
raw-window-handle = "0.6.2"
image = "0.25.2"
imgui = { version = "0.12.0", features = ["docking"] }
log = "0.4.22"
env_logger = "0.11.5"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[build-dependencies]
gl_generator = "0.14"