[package]
name = "Kuplung-Rust"
description = "Rust port of Kuplung"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/supudo/Kuplung-Rust"
authors = ["Sergey Petrov <supudo@gmail.com>"]
keywords = ["OpenGL", "graphics", "rendering"]
build = "build.rs"

[dependencies]
image = "0.25.2"
eframe = { version = "0.28.1", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
] }
egui = "0.28.1"
egui-phosphor = "0.6.0"
log = "0.4.22"
env_logger = "0.11.5"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"