[package]
name = "Kuplung-Rust"
description = "Rust port of Kuplung"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/supudo/Kuplung-Rust"
authors = ["Sergey Petrov <supudodev@gmail.com>"]
keywords = ["OpenGL", "graphics", "rendering"]
build = "build.rs"

[dependencies]
image = "0.25.2"
eframe = { version = "0.28.1", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
] }
egui = "0.28.1"
log = "0.4.22"
env_logger = "0.11.5"
clipboard = "0.5.0"
bytemuck = "1.17.0"
nalgebra-glm = "0.19.0"
strum = "0.26.3"
strum_macros = "0.26.4"
chrono = "0.4.38"
egui_extras = "0.28.1"
serde = { version = "1.0.204", features = ["derive"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"